create the class CardList which is used instead of List<Card>
also added a subclass deck