@@ -3,9 +3,18 @@ package org.jdominion.aiStrategies;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.jdominion.*;
+import org.jdominion.Card;
+import org.jdominion.Hand;
+import org.jdominion.Supply;
+import org.jdominion.Turn;
 import org.jdominion.cards.base.Remodel;
-import org.jdominion.cards.common.*;
+import org.jdominion.cards.common.Copper;
+import org.jdominion.cards.common.Curse;
+import org.jdominion.cards.common.Duchy;
+import org.jdominion.cards.common.Estate;
+import org.jdominion.cards.common.Gold;
+import org.jdominion.cards.common.Province;
+import org.jdominion.cards.common.Silver;
 import org.jdominion.decisions.ChooseActionCardToPlay;
 import org.jdominion.decisions.ChooseCardToBuy;
 import org.jdominion.decisions.ChooseCardToGain;
@@ -50,7 +59,7 @@ public class RemodelStrategy extends GenericAI {
 
 		setCardFromHandAsAnswer(decision, hand, cardsToTrash, false);
 		if (!decision.isAnswered()) {
-			decision.addAnswer(hand.getCardList().get(0));
+			decision.addAnswer(hand.getCardList().getFirst());
 		}
 	}
 
