@@ -15,7 +15,7 @@ public class OtherPlayersPutVictoryCardBackOnDeck extends CardEffectSimpleAttack
 			ChooseVictoryCardFromHandToPutOnDeck decision = new ChooseVictoryCardFromHandToPutOnDeck(playerToAttack.getHand());
 			playerToAttack.decide(decision, this);
 			assert decision.getAnswer().size() == 1;
-			playerToAttack.placeOnDeck(decision.getAnswer().get(0));
+			playerToAttack.placeOnDeck(decision.getAnswer().getFirst());
 		} else {
 			playerToAttack.revealHand();
 		}
